src/objects/Agreement_Annual_Calculation__c.object
<CustomObject>
    <fields>
        <fullName>Amortization__c</fullName>
        <label>Amortization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amortization_with_Money_Factor__c</fullName>
        <label>Amortization with Money Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Escalation__c</fullName>
        <label>Escalation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription_Revenue__c</fullName>
        <label>Subscription Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Del-Agreement Annual Calculation</label>
    <nameField>
        <displayFormat>AAC-{0000000}</displayFormat>
        <label>Agreement Annual Calculation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Annual Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>